--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,18 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        release {
+            if (project.hasProperty('ExamenRIZG')) {
+                storeFile file(my-release-key.keystore)
+                storePassword Ignis97
+                keyAlias my-release-key.keystore
+                keyPassword Ignis97
+            }
+        }
+    }
+
     splits {
         abi {
             reset()
